fix(ui): align chat log to bottom of screen

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -193,6 +193,7 @@ input[type="submit"] {
 		display: flex;
 		flex-direction: column;
 		overflow-y: auto;
+		justify-content: end;
 
 		& .list-inner > .header {
 			flex: 1;
